# ultim

./: Cargo.toml  README.md  manifest.json
modules/admin/: Cargo.toml  README.md
modules/admin/src/: lib.rs  panel.rs  route.rs  view.rs
modules/example/: Cargo.toml
modules/example/src/: lib.rs  panels.rs
ultim/: Cargo.toml
ultim/src/: lib.rs  main.rs  modules.rs  request.rs
ultim/src/modules/: builder.rs  manifest.rs  module.rs  registry.rs
