[package]
name = "ultim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.1.4", features = ["postgres"] }
downcast-rs = "1.2.0"
libloading = "0.8.1"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
simple_logger = "4.3.0"

[lib]
name = "ultim"
path = "src/lib.rs"

[[bin]]
name = "ultim"
path = "src/main.rs"
